--- a/addbooksdialog.ui
+++ b/addbooksdialog.ui
@@ -27,7 +27,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="images.qrc">
-    <normaloff>:/icons/add_books_icon.png</normaloff>:/icons/add_books_icon.png</iconset>
+    <normaloff>:/icons/books_icon.png</normaloff>:/icons/books_icon.png</iconset>
   </property>
   <widget class="QPushButton" name="buttonAdd">
    <property name="geometry">
