--- a/cleanebooksdialog.ui
+++ b/cleanebooksdialog.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="images.qrc">
-    <normaloff>:/icons/clean_icon.png</normaloff>:/icons/clean_icon.png</iconset>
+    <normaloff>:/icons/books_icon.png</normaloff>:/icons/books_icon.png</iconset>
   </property>
   <widget class="QLabel" name="labelTitle">
    <property name="geometry">
