--- a/summarywindow.ui
+++ b/summarywindow.ui
@@ -1406,6 +1406,10 @@ background-color: grey;</string>
    <addaction name="menuSearch"/>
   </widget>
   <action name="actionUndo">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/undo_icon.png</normaloff>:/icons/undo_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Undo</string>
    </property>
@@ -1414,6 +1418,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionRedo">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/redo.png</normaloff>:/icons/redo.png</iconset>
+   </property>
    <property name="text">
     <string>Redo</string>
    </property>
@@ -1422,6 +1430,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionBold">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/bold_icon.png</normaloff>:/icons/bold_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Bold</string>
    </property>
@@ -1430,6 +1442,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionItalic">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/italic_icon.png</normaloff>:/icons/italic_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Italic</string>
    </property>
@@ -1438,6 +1454,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionUnderline">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/underline_icon.png</normaloff>:/icons/underline_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Underline</string>
    </property>
@@ -1446,6 +1466,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionThrough">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/strikethrough_icon.png</normaloff>:/icons/strikethrough_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Through</string>
    </property>
@@ -1454,6 +1478,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionIncFontSize">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/increasefont_icon.png</normaloff>:/icons/increasefont_icon.png</iconset>
+   </property>
    <property name="text">
     <string>+ Font Size</string>
    </property>
@@ -1462,6 +1490,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionDecFontSize">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/decreasefont_icon.png</normaloff>:/icons/decreasefont_icon.png</iconset>
+   </property>
    <property name="text">
     <string>- Font Size</string>
    </property>
@@ -1470,6 +1502,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionIncIndent">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/increaseindent_icon.png</normaloff>:/icons/increaseindent_icon.png</iconset>
+   </property>
    <property name="text">
     <string>+ Indent</string>
    </property>
@@ -1478,6 +1514,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionDecIndent">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/decreaseindent_icon.png</normaloff>:/icons/decreaseindent_icon.png</iconset>
+   </property>
    <property name="text">
     <string>- Indent</string>
    </property>
@@ -1486,6 +1526,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionSuperscript">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/superscript_icon.png</normaloff>:/icons/superscript_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Superscript</string>
    </property>
@@ -1494,6 +1538,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionSubscript">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/subscript_icon.png</normaloff>:/icons/subscript_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Subscript</string>
    </property>
@@ -1558,16 +1606,28 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionInsertLink">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/link_icon.png</normaloff>:/icons/link_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Link</string>
    </property>
   </action>
   <action name="actionInsertImage">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/image_icon.png</normaloff>:/icons/image_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Image</string>
    </property>
   </action>
   <action name="actionInsertTable">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/table_icon.png</normaloff>:/icons/table_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Table</string>
    </property>
@@ -1597,6 +1657,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionInsertLine">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/hr_icon.png</normaloff>:/icons/hr_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Line</string>
    </property>
@@ -1657,6 +1721,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionClearAll">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/cleartext_icon.png</normaloff>:/icons/cleartext_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Clear All</string>
    </property>
@@ -1689,6 +1757,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionSearchText">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/searchbar_icon.png</normaloff>:/icons/searchbar_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Search Text</string>
    </property>
@@ -1697,6 +1769,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionClearSearch">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/clear_icon.png</normaloff>:/icons/clear_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Clear Search</string>
    </property>
@@ -1705,6 +1781,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionHighlight">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/highlight_icon.png</normaloff>:/icons/highlight_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Highlight</string>
    </property>
@@ -1713,6 +1793,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionCodeBlock">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/code_icon.png</normaloff>:/icons/code_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Code Block</string>
    </property>
@@ -1721,6 +1805,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionBulletedList">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/bullets_icon.png</normaloff>:/icons/bullets_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Bulleted List</string>
    </property>
@@ -1729,6 +1817,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionOrderedList">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/numbers_icon.png</normaloff>:/icons/numbers_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Ordered List</string>
    </property>
@@ -1737,6 +1829,10 @@ background-color: grey;</string>
    </property>
   </action>
   <action name="actionSaveSummary">
+   <property name="icon">
+    <iconset resource="images.qrc">
+     <normaloff>:/icons/save_icon.png</normaloff>:/icons/save_icon.png</iconset>
+   </property>
    <property name="text">
     <string>Save Summary</string>
    </property>
