--- a/resources/style.qrc
+++ b/resources/style.qrc
@@ -5,5 +5,6 @@
         <file>styles/summarystyle.qss</file>
         <file>styles/textEditorStyle.qss</file>
         <file>styles/colorpickerstyle.qss</file>
+        <file>styles/quote.qss</file>
     </qresource>
 </RCC>
